--- a/index.html
+++ b/index.html
@@ -7,17 +7,146 @@
     <link rel="stylesheet" href="styles.css" />
     <title>PIXL</title>
 </head>
-<body class="bg-pixl-dark text-pixl-light h-dvh w-full overflow-clip relative">
-    <div class="absolute inset-0 overflow-clip">
-        <img src="/images/Official%20Login%20Background.png" alt="Background Image" class="absolute inset-y-0 left-[15%] h-full w-full object-cover mask-l-from-80% opacity-30">
+<body class="bg-pixl-dark text-pixl-light h-dvh w-full md:overflow-clip relative flex flex-col md:block">
+    <!-- Background Image -->
+    <div class="fixed inset-0 overflow-clip">
+        <img
+            src="/images/Official%20Login%20Background.png"
+            alt="Background Image"
+            class="absolute inset-y-0 left-[15%] h-full w-full object-cover mask-l-from-80% opacity-30"
+        >
     </div>
-    <footer class="fixed bottom-0 inset-x-0 pb-3">
-        <div class="h-16 w-full bg-pixl-darker/70 backdrop-blur-md border-t border-pixl-dark/50 flex items-center justify-center">
+
+    <main class="flex-grow max-md:pt-16 grid place-items-center md:h-full isolate max-w-[1000px] xs:max-w-5xl mx-auto px-8">
+        <div class="flex flex-col md:flex-row gap-8 md:gap-16 justify-between items-center w-full">
+            <!-- Logo * word sa -->
+            <div>
+                <div class="flex gap-3 items-baseline">
+                    <svg class="w-36" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 182 61" fill="none">
+                    <path
+                            fill="#EEE"
+                            d="M10.083 0H0v10.083h10.083V0Zm10.084 0H10.084v10.083h10.083V0Z"
+                    ></path>
+                    <path
+                            fill="#EEE"
+                            d="M30.25 0H20.165v10.083h10.083V0ZM10.083 10.083H0v10.084h10.083V10.083Zm30.25 0H30.25v10.084h10.083V10.083Zm-30.25 10.084H0V30.25h10.083V20.167Zm30.25 0H30.25V30.25h10.083V20.167ZM10.083 30.25H0v10.083h10.083V30.25Zm10.084 0H10.084v10.083h10.083V30.25Z"
+                    ></path>
+                    <path
+                            fill="#EEE"
+                            d="M30.25 30.25H20.165v10.083h10.083V30.25ZM10.083 40.333H0v10.084h10.083V40.333Zm0 10.084H0V60.5h10.083V50.417ZM60.5 0H50.415v10.083h10.083V0Zm10.083 0H60.5v10.083h10.083V0Zm10.084 0H70.584v10.083h10.083V0ZM70.583 10.083H60.5v10.084h10.083V10.083Zm0 10.084H60.5V30.25h10.083V20.167Zm0 10.083H60.5v10.083h10.083V30.25Zm0 10.083H60.5v10.084h10.083V40.333Zm0 10.084H60.5V60.5h10.083V50.417ZM60.5 50.416H50.415V60.5h10.083V50.416Zm20.167 0H70.584V60.5h10.083V50.416Z"
+                    ></path>
+                    <path
+                            fill="#ECA749"
+                            d="M100.833 0H90.75v10.083h10.083V0Zm0 10.083H90.75v10.084h10.083V10.083ZM131.083 0H121v10.083h10.083V0Zm0 10.083H121v10.084h10.083V10.083Zm-30.25 30.25H90.75v10.084h10.083V40.333Zm0 10.084H90.75V60.5h10.083V50.417Zm30.25-10.084H121v10.084h10.083V40.333Zm0 10.084H121V60.5h10.083V50.417ZM110.917 30.25h-10.083v10.083h10.083V30.25Zm10.082-10.084h-10.083V30.25h10.083V20.166Z"
+                    ></path>
+                    <path
+                            fill="#ECA749"
+                            d="M110.917 20.166h-10.083V30.25h10.083V20.166Zm10.082 10.084h-10.083v10.083h10.083V30.25Z"
+                    ></path>
+                    <path
+                            fill="#EEE"
+                            d="M151.249 0h-10.083v10.083h10.083V0Zm0 10.084h-10.083v10.083h10.083V10.083Z"
+                    ></path>
+                    <path
+                            fill="#EEE"
+                            d="M151.249 20.166h-10.083V30.25h10.083V20.166Zm0 10.084h-10.083v10.083h10.083V30.25Zm0 10.084h-10.083v10.083h10.083V40.333Z"
+                    ></path>
+                    <path
+                            fill="#EEE"
+                            d="M151.249 50.416h-10.083V60.5h10.083V50.416Zm10.084.001H151.25V60.5h10.083V50.417Zm10.084-.001h-10.083V60.5h10.083V50.416Z"
+                    ></path>
+                    <path fill="#EEE" d="M181.499 50.416h-10.083V60.5h10.083V50.416Z"></path>
+                </svg>
+                    <div aria-hidden="true" class="hidden md:block uppercase text-4xl text-pixl relative">
+                        <!-- Top -->
+                        <div class="absolute opacity-20 flex flex-col gap-2 my-2 bottom-full">
+                            <div class="opacity-50 flex flex-col gap-2">
+                                <p>Coder</p>
+                                <p>Art</p>
+                                <p>Writer</p>
+                                <p>Media</p>
+                                <p>Designer</p>
+                                <p>Coder</p>
+                                <p>Designer</p>
+                                <p>Art</p>
+                                <p>Writer</p>
+                                <p>Coder</p>
+                                <p>Art</p>
+                                <p>Coder</p>
+                                <p>Art</p>
+                                <p>Writer</p>
+                            </div>
+                            <p>Media</p>
+                        </div>
+                        <!-- Anchor -->
+                        <p>Everyone</p>
+                        <!-- Bottom -->
+                        <div class="absolute opacity-20 flex flex-col gap-2 my-2">
+                            <p>Coder</p>
+                            <p>Art</p>
+                            <div class="opacity-50 flex flex-col gap-2">
+                                <p>Coder</p>
+                                <p>Art</p>
+                                <p>Writer</p>
+                                <p>Media</p>
+                                <p>Designer</p>
+                                <p>Coder</p>
+                                <p>Designer</p>
+                                <p>Art</p>
+                                <p>Writer</p>
+                                <p>Coder</p>
+                                <p>Art</p>
+                                <p>Coder</p>
+                                <p>Art</p>
+                                <p>Writer</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Action buttons -->
+            <div class="min-[360px]:w-72 sm:w-80 max-w-full pb-16">
+                <h1 class="text-center md:text-left text-pixl text-2xl sm:text-3xl">A place for the cool squares</h1>
+                <div class="flex flex-col gap-3 mt-8 sm:mt-12 md:w-68 text-center">
+                    <a
+                        href="#"
+                        class="bg-pixl-dark/50 border border-pixl/50 px-4 py-1.5 text-pixl hover:bg-pixl-dark/55 hover:border-pixl/55 active:bg-pixl-dark/75 active:border-pixl/75 transition"
+                    >
+                        Sign in with Google
+                    </a>
+                    <a
+                        href="#"
+                        class="bg-pixl-dark/50 border border-pixl/50 px-4 py-1.5 text-pixl hover:bg-pixl-dark/55 hover:border-pixl/55 active:bg-pixl-dark/75 active:border-pixl/75 transition"
+                    >
+                        Sign in with Apple
+                    </a>
+                    <p>or</p>
+                    <a
+                        href="#"
+                        class="bg-pixl border border-transparent px-4 py-1.5 text-pixl-dark hover:bg-pixl/90 active:bg-pixl/95  transition"
+                    >
+                        Create an Account
+                    </a>
+                    <p class="text-sm mt-12 sm:mt-16 md:mt-20 text-left">Already have an account?</p>
+                    <a href="#"
+                       class="bg-pixl border border-transparent px-4 py-1.5 text-pixl-dark hover:bg-pixl/90 active:bg-pixl/95  transition"
+                    >
+                        Sign in
+                    </a>
+                </div>
+            </div>
+        </div>
+    </main>
+
+    <footer class="relative md:fixed md:bottom-0 md:inset-x-0 pb-3">
+        <div class="h-16 w-full bg-pixl-darker/70 backdrop-blur-md border-t border-pixl-dark/50 flex items-center text-center justify-center">
             <p class="text-sm text-pixl">© 2024 PIXL. All rights reserved.</p>
         </div>
 
         <!-- White noise overlay -->
         <div class="absolute bottom-0 h-4 inset-x-0 bg-[url(/images/white-noise.gif)]"></div>
+        <!-- Pictogram -->
     </footer>
 </body>
 </html>
